// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleWithIcon should be gradient when passed array of colors 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    proxiedProperties={
      {
        "colors": [
          4294901760,
          4294967040,
        ],
        "endPoint": [
          0.5,
          1,
        ],
        "locations": undefined,
        "startPoint": [
          0.5,
          0,
        ],
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#55ACEE",
            "fontSize": 40,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`CircleWithIcon should be gradient when passed array of colors and positioned with start/end 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    proxiedProperties={
      {
        "colors": [
          4294901760,
          4294967040,
        ],
        "endPoint": [
          1,
          1,
        ],
        "locations": undefined,
        "startPoint": [
          0,
          0,
        ],
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#55ACEE",
            "fontSize": 40,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`CircleWithIcon should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F1F5FD",
        "borderRadius": 80,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
    ]
  }
>
  <Text />
</View>
`;
